--- a/app/globals.css
+++ b/app/globals.css
@@ -241,7 +241,7 @@
 }
 
 .luxury-testimonial::before {
-  content: """;
+  content: "";
   position: absolute;
   top: 10px;
   left: 10px;
@@ -1901,7 +1901,7 @@ html {
 }
 
 .luxury-testimonial::before {
-  content: """;
+  content: "";
   position: absolute;
   top: 10px;
   left: 10px;
